test/errors/list/index_bad_type.np
l = [1]
l.index("one")
